cmake_minimum_required(VERSION 3.0)
project(bxextensions)
option(INSTALL_GTEST OFF)
add_subdirectory(lib)
if("${EXTENSION_MODULES}" STREQUAL "")
    set(EXTENSION_MODULES "")
endif()
foreach(EXT_MODULE ${EXTENSION_MODULES})
	message("including extension: ${EXT_MODULE}")
	add_subdirectory(${EXT_MODULE})
endforeach()
