cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_FLAGS_DEBUG "-g")
add_compile_options(-Wall -Wextra)
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
project(bxextensions)
option(INSTALL_GTEST OFF)
add_subdirectory(lib)
if("${EXTENSION_MODULES}" STREQUAL "")
    set(EXTENSION_MODULES "")
endif()
foreach(EXT_MODULE ${EXTENSION_MODULES})
	message("including extension: ${EXT_MODULE}")
	add_subdirectory(${EXT_MODULE})
endforeach()
